feat: stock save logic, safe created